kubernetes/ingress/example-ingress-2.yaml
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: example-ingress-hi
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: hi-there.info
    http:
      paths:
      - path: /
        backend:
          serviceName: hi
          servicePort: 8080
      - path: /v2/*
        backend:
          serviceName: hi2
          servicePort: 8080
